popularLinks and myLinks spacing fix

--- a/web/themes/custom/myusf/sass/src/partials/_dashboard.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_dashboard.scss
@@ -553,6 +553,7 @@
 							max-width: 95px;
 						    overflow: hidden;
 						    text-overflow: ellipsis;
+						    line-height: 1.5;
 						}
 						&:first-child td {
 							padding-top: 1rem!important;
@@ -770,6 +771,7 @@
 						    overflow: hidden;
 						    text-overflow: ellipsis;
 						    white-space: nowrap;
+						    line-height: 1.5; 
 						}
 						&:first-child td {
 							padding-top:0.3125rem!important;
